--- a/index.html
+++ b/index.html
@@ -14,9 +14,27 @@
 
 <body class="body1" id="body1">
     <div id="container"></div>
-    <div class="inp">
-        <input id="search_input" type="text" name="search1" placeholder="Enter a country">
-        <i class="bx bx-search" onclick="search_image()" id="btn"></i>
+    <div class="weather_info">
+        <h1 class="city" id="city">
+            London
+        </h1>
+        <hr>
+        <h2 id="day" class="day">
+            Monday <span id="date">JUNE 14, 2000</span>
+        </h2>
+        <hr>
+        <h3 id="degree">
+            50
+        </h3>
+    </div>
+
+
+    <div class="search">
+        <h1 id="time"></h1>
+        <div class="inp">
+            <input id="search_input" type="text" name="search1" placeholder="Enter a country">
+            <i class="bx bx-search" onclick="search_image()" id="btn"></i>
+        </div>
     </div>
 
 
