--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
             </h3>
             <img src="" alt="" id="icon">
+            <h2 id="description"></h2>
         </div>
     </div>
 
